/*
 * $Id: ChangeLog,v 1.711 2003/02/12 19:26:07 map Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/


2003-02-13 02:20 UTC+0100 Giancarlo Niccoai <gian@niccolai.ws>
  ! source/rdd/Makefile
    ! RDD was not compiling in MT mode (mingw)

  * source/vm/estack.c
    * a minor stylistic fix in defines

  ! source/vm/inet.c
    ! Wrong length parameter in InetDGramRecv

  * source/vm/thread.c
    * Minor stylistic changes

  ! samples/sitesvr/Makefile
    ! Was linking pp.lib instead of ppmt.lib

  * samples/sitesvr/sitesvr.prg
    * Some tests and work in progress


2003-02-12 20:15 UTC+0100 Marek Paliwoda <paliwoda@inetia.pl>
  * source/vm/extend.c
  * source/vm/itemapi.c
    * Added possibility to get values from LOGICAL vars
      when retrieving numeric values at a C level (you
      will get 0 or 1).

  * source/vm/hvm.c
    * Added support for C-like IF <numeric> conditions.
      This is DISABLED by default. Enabled only when
      compiled with HB_USE_NUMERIC_IF defined.

2003-02-12 11:30 UTC-0200 Luiz Rafale Culik <culikr@uol.com.br>
  * source/common/hbffind.c
   ! minor Format
   + Support for open watcom
  * config/dos/watcom.cf
  + config/w32/watcom.cf
    ! Proper ajusted to work with Open watcom
  * utils/hbmake/hbmake.prg
    utils/hbmake/hbmutils.prg
    % Optimized the Code by replacing At( Exp, Source ) > 0  with Exp IN Source
      Replace IF with Swtich Case Where Possible
      Replace For n:=1 to Len(Array) with FOR EACH info IN Array when Possible
      Source Code Totally Reformated

2003-02-12 12:20 UTC+0100 Giancarlo Niccoai <gian@niccolai.ws>
  ! config/linux/gcc.cf
  ! config/w32/mingw32.cf
    ! fixed making of samples directory (I wonder how this has
      passed through up to date).
  ! samples/sitesvr/Makefile
    - Removed pthread from libs; now pthread is added by the makefiles