@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.711 2003/02/12 19:26:07 map Exp $
+ * $Id: ChangeLog,v 1.712 2003/02/13 01:22:31 jonnymind Exp $
  */
 
 /* Use this format for the entry headers:
@@ -8,6 +8,9 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2003-02-13 12:15 UTC-0300 Marcelo Lombardo <lombardo@uol.com.br>
+  * source/rdd/dbfcdx/dbfcdx1.c
+    ! Fixed hb_cdxOrderListFocus() to not change the Found() status
 
 2003-02-13 02:20 UTC+0100 Giancarlo Niccoai <gian@niccolai.ws>
   ! source/rdd/Makefile
